Fix z-index on toasts

--- a/static/css/boostrap-fdp-theme.scss
+++ b/static/css/boostrap-fdp-theme.scss
@@ -88,6 +88,11 @@ main.container {
   flex: 1 0 auto;
 }
 
+/* Toasts tweaks */
+.toast-container {
+  z-index: 1000;
+}
+
 .footer {
   flex-shrink: 0;
   .container {
